--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
+    "axios": "^1.3.6",
     "esbuild-wasm": "^0.17.16",
+    "localforage": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
