--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.6",
-    "esbuild-wasm": "^0.17.16",
+    "esbuild": "^0.17.18",
+    "esbuild-wasm": "^0.17.18",
     "localforage": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
