--- a/package.json
+++ b/package.json
@@ -3,28 +3,42 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/parser": "^7.21.5",
+    "@monaco-editor/react": "^4.5.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
+    "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
+    "@types/react-resizable": "^3.0.4",
     "axios": "^1.3.6",
+    "buffer": "^6.0.3",
+    "bulmaswatch": "^0.8.1",
     "esbuild": "^0.17.18",
     "esbuild-wasm": "^0.17.18",
+    "jscodeshift": "^0.14.0",
     "localforage": "^1.10.0",
+    "monaco-editor": "0.37.1",
+    "monaco-jsx-highlighter": "^2.0.4",
+    "prettier": "^2.8.8",
+    "process": "^0.11.10",
     "react": "^18.2.0",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
+    "react-resizable": "^3.0.5",
     "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
     "typescript": "^5.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "debug": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-scripts test",
+    "eject": "react-app-scripts eject"
   },
   "eslintConfig": {
     "extends": [
