--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "@types/react-resizable": "^3.0.4",
+    "@uiw/react-md-editor": "^3.20.10",
     "axios": "^1.3.6",
     "buffer": "^6.0.3",
     "bulmaswatch": "^0.8.1",
