--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/parser": "^7.21.5",
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@monaco-editor/react": "^4.5.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
