--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "axios": "^1.4.0",
     "buffer": "^6.0.3",
     "bulmaswatch": "^0.8.1",
-    "esbuild": "^0.17.18",
-    "esbuild-wasm": "^0.17.18",
+    "esbuild": "^0.17.19",
+    "esbuild-wasm": "^0.17.19",
     "jscodeshift": "^0.14.0",
     "localforage": "^1.10.0",
     "monaco-editor": "0.37.1",
@@ -42,7 +42,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "debug": "react-app-rewired start",
+    "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-scripts test",
     "eject": "react-app-scripts eject"
