--- a/packages/code-note-local-api/package.json
+++ b/packages/code-note-local-api/package.json
@@ -16,6 +16,7 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "code-note-local-client": "^0.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6"
