--- a/packages/code-note-cli/package.json
+++ b/packages/code-note-cli/package.json
@@ -1,19 +1,29 @@
 {
-  "name": "code-note-cli",
+  "name": "codenote",
   "version": "1.0.0",
+  "files": [
+    "dist"
+  ],
+  "bin": "dist/index.js",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
-    "start": "tsc --watch --preserveWatchOutput"
+    "start": "tsc --watch --preserveWatchOutput",
+    "prepublishOnly": "esbuild src/index.ts --platform=node --outfile=dist/index.js --bundle --minify --define:process.env.NODE_ENV=\\\"production\\\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "code-note-local-api": "^1.0.0",
-    "commander": "^10.0.1"
+    "@codenote/ui": "^1.0.0"
   },
   "description": "",
   "devDependencies": {
     "@types/node": "^20.2.3",
-    "typescript": "^5.0.4"
+    "esbuild": "^0.18.11",
+    "typescript": "^5.0.4",
+    "@codenote/server": "^1.0.0",
+    "commander": "^10.0.1"
   }
 }
