--- a/packages/code-note-local-client/package.json
+++ b/packages/code-note-local-client/package.json
@@ -1,8 +1,13 @@
 {
-  "name": "code-note-local-client",
+  "name": "@codenote/ui",
   "version": "0.1.0",
-  "private": true,
-  "dependencies": {
+  "files": [
+    "build"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
+  "devDependencies": {
     "@babel/parser": "^7.21.5",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@monaco-editor/react": "^4.5.0",
@@ -46,7 +51,8 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-scripts test",
-    "eject": "react-app-scripts eject"
+    "eject": "react-app-scripts eject",
+    "prepublishOnly": "npm run build"
   },
   "eslintConfig": {
     "extends": [
