--- a/packages/code-note-local-api/package.json
+++ b/packages/code-note-local-api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@codenote/server",
+  "name": "@jscodestation/server",
   "version": "1.0.0",
   "files": [
     "dist"
@@ -23,9 +23,10 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "@codenote/ui": "^1.0.0",
+    "@jscodestation/ui": "^1.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6"
-  }
+  },
+  "gitHead": "d0fcdfc2f3c712a7afa208eab831eb5d4c9c731d"
 }
